Prevent to flickering Fatal Error Message

--- a/app/sass/common/_body.scss
+++ b/app/sass/common/_body.scss
@@ -41,8 +41,17 @@ textarea {
     line-height: inherit;
 }
 
+/*
+  Allow angular.js to be loaded in body, hiding cloaked elements until
+  templates compile.  The !important is important given that there may be
+  other selectors that are more specific or come later and might alter display.
+ -------------------------------------------------- */
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+    display: none !important;
+}
+
 /* Wallpaper
--------------------------------------------------- */
+
 body {
     background-image: url('wallpaper.png'); 
    
